# ridgeback_iiwa_integration

./: .gitmodules  README.md
doc/: demo.md
doc/iiwa/: NetworkSetup.md
doc/ridgeback/: NetworkSetup.md  StartFromScratch.md
rideback_iiwa_manipulation/: CMakeLists.txt  package.xml
rideback_iiwa_manipulation/launch/: interactive_manipulation.launch  manipulation.launch  manipulation_w_navigation.launch  mobile_manipulation.launch  simple_manipulation.launch
rideback_iiwa_manipulation/rviz/: manipulation.rviz  navigation.rviz
rideback_iiwa_manipulation/src/: simple_manipulation.cpp
ridgeback_description/launch/: ridgeback_iiwa_world.launch
ridgeback_description/urdf/: ridgeback.gazebo  ridgeback.urdf.xacro
ridgeback_iiwa_description/: package.xml
ridgeback_iiwa_description/launch/: ridgeback_iiwa_upload.launch
ridgeback_iiwa_description/meshes/: upper_cover.stl
ridgeback_iiwa_description/urdf/: hams.gazebo.xacro  hams.urdf.xacro  iiwa.gazebo.xacro  iiwa.transmission.xacro  iiwa7.xacro  ridgeback_iiwa_robot.urdf.xacro
ridgeback_iiwa_gazebo/: CMakeLists.txt  package.xml
ridgeback_iiwa_gazebo/config/: arm_controller.yaml  gazebo_controller.yaml
ridgeback_iiwa_gazebo/launch/: controller_utils.launch  ridgeback_iiwa_controller.launch  ridgeback_iiwa_gazebo.launch  ridgeback_iiwa_gazebo_smooth_wall.launch  ridgeback_iiwa_world.launch  spawn_iiwa.launch  spawn_iiwa_ridgeback.launch  wood_bee_hive_world.launch
ridgeback_iiwa_gazebo/mesh/: smooth_curve.stl
ridgeback_iiwa_gazebo/worlds/: smooth_curve_world.sdf  smooth_curve_world.world  wood_bee_hive_world.world
ridgeback_iiwa_gazebo/worlds/mesh/: bee_hive_1.stl  bee_hive_2.stl  smooth_wall_2.stl  smooth_wall_3.stl  wood_bee_hive.stl  wood_bee_hive_three.stl
ridgeback_iiwa_manipulation/launch/: mobile_manipulation_interactive_demo.launch  simple_manipulation.launch
ridgeback_iiwa_manipulation/rviz/: robot.rviz
ridgeback_iiwa_manipulation/src/: simple_manipulation.cpp
ridgeback_iiwa_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ridgeback_iiwa_moveit/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ridgeback.srdf  ros_controllers.yaml
ridgeback_iiwa_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_drawing.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ri_drawing_example.launch  ridgeback_moveit_controller_manager.launch.xml  ridgeback_moveit_planning_execution.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ridgeback_iiwa_moveit/scripts/: customize_moveit.sh
ridgeback_iiwa_moveit_config/config/: ridgeback.srdf
ridgeback_iiwa_moveit_config/launch/: demo.launch
ridgeback_iiwa_navigation/: CMakeLists.txt  package.xml
ridgeback_iiwa_navigation/launch/: amcl_navigation.launch  gmapping.launch  odom_navigation.launch
ridgeback_iiwa_navigation/maps/: ridgeback_race.yaml  smooth_curve_world.pgm  smooth_curve_world.yaml
ridgeback_iiwa_navigation/rviz/: manipulation.rviz
ridgeback_iiwa_viz/: CMakeLists.txt  package.xml
ridgeback_iiwa_viz/launch/: view_robot.launch
ridgeback_iiwa_viz/rviz/: drawing.rviz  drawing_markers.rviz  drawing_realtime.rviz  interactive.rviz
ridgeback_manipulation_description/urdf/: hams.urdf.xacro
