<?xml version="1.0"?>
<package>
  <name>ridgeback_iiwa_manipulation</name>
  <version>0.1.0</version>
  <description>Launch files and code for manipulating Ridgeback + iiwa</description>
  <author email="daeun7250@gmail.com">Daeun Song</author>
  <maintainer email="daeun7250@gmail.com">Daeun Song</maintainer>
  <license>BSD</license>

  <test_depend>roslaunch</test_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>

  <run_depend>ridgeback_description</run_depend>

  <build_depend>iiwa_ros</build_depend>
  <run_depend>iiwa_ros</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
